--- a/styles/main.scss
+++ b/styles/main.scss
@@ -11,7 +11,7 @@ body {
     padding: 0;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji",
         "Segoe UI Emoji", "Segoe UI Symbol";
-    background-color: black;
+    background-color: white;
 }
 
 * {
